# buildroot

./: README.md
app/relay/: CMakeLists.txt  main.cxx  relay_helper.cxx  relay_helper.hxx
app/relay/gpio/: gpio_helper.cxx  gpio_helper.hxx  key_thread.cxx  key_thread.hxx
app/relay/network/: net_thread.cxx  net_thread.hxx
app/relay/system/: file.cxx  file.hxx  hal_linux.cxx  hal_linux.hxx
app/relay/time/: ntp_thread.cxx  ntp_thread.hxx
board/210/: post-build-210.sh
board/210/fs-overlay/etc/: wpa_supplicant.conf
board/210/fs-overlay/etc/init.d/: S10mdev
board/3288/: busybox.config  post-build-3288.sh
board/3288/fs-overlay/etc/: ap.conf  ap_5g.conf  inittab  ntp.conf  profile  simple.script  sta.conf  sta_5g.conf  udhcpd.conf
board/3288/fs-overlay/etc/default/: dropbear
board/3288/fs-overlay/etc/init.d/: S11enable_lo
board/356x/: busybox.config
board/64/fs-overlay/etc/: fstab
configs/: 210_defconfig  3288_defconfig  356x_defconfig  64_defconfig
package/: Config.in
package/210/gadgetraw/: Makefile  f_gadgetraw.c  f_gadgetraw.ko  gr.sh
package/210/gadgetraw/app/: Makefile  usb.c
package/210/rtl8821cu/: 8821cu.ko  Makefile  rtl8821cu.sh
package/3288/: 3288.mk  Config.in
package/3288/brcm_hostapd/: Config.in  brcm_hostapd.mk
package/3288/brcm_wpa_supplicant/: Config.in  brcm_wpa_supplicant.hash  brcm_wpa_supplicant.mk
package/3288/relay/: Config.in  S20relay  relay.mk
package/busybox/: 0003-busybox-support-chinese-display-in-terminal.patch
package/util-linux/: 0003-lsblk.patch  Config.in  util-linux.mk
(+3 files in other folders)
